# Lectures

./: .gitignore  README.md
.github/workflows/: run.yml
Lecture_1/: CMakeLists.txt
Lecture_1.5/: CMakeLists.txt  test.py
Lecture_1.5/src/: config.h.in  main.cpp
Lecture_1.5/src/python/: model_inference.c  model_inference.py  model_inference.pyx  requirements.txt  setup.py
Lecture_1/include/: EigenTest.hpp
Lecture_1/src/: CMakeLists.txt  EigenTest.cpp  main.cpp
Lecture_10/src/: CMakeLists.txt  image_processor.h  main.cpp
Lecture_10/tests/: test_image_processor_gtest.cpp
Lecture_2/: CMakeLists.txt
Lecture_2/src/: image_processor.cpp  main.cpp
Lecture_2/tests/: CMakeLists.txt  test_image_processor_doctest.cpp  test_image_processor_gtest.cpp
Lecture_3/: CMakeLists.txt  main.cpp
Lecture_6/: fork.cpp  message_queue.cpp  mpi.cpp  omp.cpp  omp_pragma.cpp  parallel_fork.cpp  pipe.cpp  shared_memory.cpp  signals.cpp  tbb.cpp  wait.cpp
Lecture_7/: CMakeLists.txt
Lecture_7/src/: cudnn.cu  matrix_mul.cu  simple_convnet.cu  vector_add.cu
Lecture_8/: CMakeLists.txt  Dockerfile  install_nvidia_docker_toolkit.sh
Lecture_8/src/: simple_convnet.cu
Lecture_9/: CMakeLists.txt  docker-compose.yml  index.html  server.cpp
Lecture_9/docker/: Dockerfile.builder  Dockerfile.server
Lecture_9/include/: image_processor.hpp
Lecture_9/src/: CMakeLists.txt  image_processor.cpp
